agregada función getFilePath

--- a/files/readme.html
+++ b/files/readme.html
@@ -15,10 +15,7 @@ La idea de este script es realizar conversiones rápidamente con solo enfocar el
 Ingresamos al submenú del tipo de archivo que vamos a convertir y pulsamos intro sobre el formato de salida, lo que iniciará el proceso. Al finalizar se realizará un sonido que indica la finalización de la conversión.<br />
 En el caso de que el formato deseado no se encuentre en la lista, la última opción de cada apartado es el ítem otros.<br />
 Al pulsar en esta opción se activa un cuadro en el que deberemos escribir el formato de salida sin el punto, por ejemplo "opus, sin comillas. Al pulsar intro se iniciará la conversión.<br />
-En el caso de querer convertir todos los archivos de una carpeta, pulsamos el atajo correspondiente situados dentro de la misma. Al pulsarlo se activa una pequeña ventana gui con una lista de formatos de salida. Seleccionamos el correcto y pulsamos en el botón iniciar conversión, y al finalizar se reproducirá un sonido que indica la finalización del proceso.<br />
-nota:<br />
-Fundamentalmente con los documentos, es conveniente antes de presionar el atajo para convertir el archivo copiarlo al portapapeles.<br />
-Por lo que luego de enfocar el archivo a convertir hay que presionar control + c, y luego el atajo que activa la conversión individual.</p>
+En el caso de querer convertir todos los archivos de una carpeta, pulsamos el atajo correspondiente situados dentro de la misma. Al pulsarlo se activa una pequeña ventana gui con una lista de formatos de salida. Seleccionamos el correcto y pulsamos en el botón iniciar conversión, y al finalizar se reproducirá un sonido que indica la finalización del proceso.</p>
 <h2 id="formatos-soportados">Formatos soportados:</h2>
 <p>El ffmpeg permite convertir entre una extensa lista de formatos. Entre video y video, entre video y audio, y entre audio y audio. para una lista detallada de los formatos soportados, haga click <a href="https://es.wikipedia.org/wiki/FFmpeg">aquí</a><br />
 Para las conversiones entre documentos se utiliza el programa pandoc. Para una lista detallada de formatos soportados, pulse el siguiente <a href="https://es.wikipedia.org/wiki/Pandoc">link de wikipedia</a></p>
