corrección en la documentación

--- a/files/readme.html
+++ b/files/readme.html
@@ -7,7 +7,7 @@ La idea de este script es realizar conversiones rápidamente con solo enfocar el
 <li>f4; Convierte el archivo con el foco actual.</li>
 <li>shift + f4; Convierte todos los archivos que se encuentran en la carpeta actual, incluyendo las subcarpetas.</li>
 <li>alt + control + s; suspende y reanuda los atajos del script.</li>
-<li>alt + control + e; Cierra el script.</li>
+<li>alt + control + q; Cierra el script.</li>
 </ul>
 <p>Pulsando aplicaciones sobre el ícono de la bandeja de sistemas, se puede modificar la calidad del audio resultante a través del bitrate. El valor por defecto es 128 kbps.</p>
 <h2 id="como-funciona">¿Como funciona?</h2>
