correcciones en folderConverter, archivo strings.ini

--- a/files/readme-es.html
+++ b/files/readme-es.html
@@ -1,3 +1,11 @@
+<!doctype html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<title>Instrucciones</title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
+<body>
 <h1 id="conversiones">Conversiones</h1>
 <p>Script creado por Gerardo Késsler. <a href="mailTo:ReaperYOtrasYerbas@gmail.com">ReaperYOtrasYerbas@gmail.com</a><br />
 La idea de este script es realizar conversiones rápidamente con solo enfocar el elemento a convertir, sin interfaces gráficas y con solo un par de atajos de teclado.</p>
@@ -23,3 +31,7 @@ Para las conversiones entre documentos se utiliza el programa pandoc. Para una l
 <p>Puede que en algunos sistemas operativos no funcionen correctamente FFMPEG o pandoc, por la ausencia de siertas librerías importantes para el sistema.<br />
 En tal caso puede descargar un instalador de las librerías necesarias desde el siguiente <a href="https://www.mediafire.com/file/0a6bpgnr9rhf4kp/MPVCI_2.5_setup.rar/file">enlace directo</a><br />
 Solo hay que instalar el archivo, lo que debería solucionar el problema. La contraseña es “reaper”, sin comillas.</p>
+
+
+</body>
+</html>
