nueva interfaz para conversiones masivas

--- a/files/readme-tr.html
+++ b/files/readme-tr.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="tr">
+<html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>readme</title>
+<title>Readme</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -24,7 +24,7 @@ Bu komut dosyasının amacı, grafik arayüzler olmadan ve sadece birkaç klavye
 Dönüştüreceğimiz dosya türünün alt menüsüne giriyoruz ve işlemi başlatacak olan çıktı formatına enter tuşuna basıyoruz. Sonunda, dönüşümün tamamlandığını belirten bir ses çıkarılacaktır.<br />
 İstenen formatın listede olmaması durumunda her listenin sonunda diğer adlı bir seçenek bulunur.<br />
 Bu seçeneğe tıklamak, çıkış biçimini nokta olmadan yazmamız gereken bir kutuyu etkinleştirir, örneğin "opus, tırnak işaretleri olmadan. Enter tuşuna basmak dönüştürmeyi başlatır. Çıktı dosyası, oluşturulduğu aynı klasörde oluşturulur. orijinal, aynı ada ve yeni uzantıya sahip.<br />
-Para convertir todos los archivos de una carpeta, pulsamos el atajo correspondiente situados dentro de la misma. Al pulsarlo se activa una pequeña ventana gui con una lista de formatos de salida. Seleccionamos el correcto y pulsamos en el botón iniciar conversión, y al finalizar se reproducirá un sonido que indica la sürecin tamamlanmasıyla, Ortaya çıkan dosyalar, geçerli dizinde dönüştürülen adlı yeni bir klasöre kaydedilir.</p>
+Bir klasördeki tüm dosyaları dönüştürmek için, bulunan ilgili kısayola basın. Buna basmak, çıktı biçimlerinin bir listesini içeren küçük bir seçim penceresini etkinleştirir. Doğru olanı seçiyoruz ve dönüştürmeyi başlat düğmesine tıklıyoruz ve sonunda bunu belirten bir ses çalacak. sürecin tamamlanmasıyla, Ortaya çıkan dosyalar, geçerli dizinde dönüştürülen adlı yeni bir klasöre kaydedilir.</p>
 <h2 id="desteklenen-biçimler">Desteklenen biçimler:</h2>
 <p>ffmpeg, kapsamlı bir format listesi arasında dönüştürme yapmanızı sağlar. Video ile video arasında, video ile ses arasında ve ses ile ses arasında.<br />
 Desteklenen biçimlerin ayrıntılı bir listesi için tıklayın: <a href="https://es.wikipedia.org/wiki/FFmpeg">burada</a><br />
